--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap');
+:root {
+    --glitched-duration: 0.9s;
+    --glitched-long-duration: 3s;
+    --yellow-color: #f9f002;
+    --orange-color: #ff9800;
+    --border-color: #8ae66e;
+    --red-color: #ff003c;
+    --blue-color: #136377;
+    --green-color: #446d44;
+    --purple-color: purple;
+}
+
 html {
     background: radial-gradient(at top, rgb(129, 12, 12), rgb(0, 0, 0));
     background-attachment: fixed;
@@ -121,11 +133,6 @@ h3 {
     margin-left: 60px;
 }
 
-:root {
-    --yellow-color: #f9f002;
-    --border-color: #8ae66e;
-}
-
 .cyberpunk {
     width: 600px;
     margin: auto;
@@ -182,4 +189,426 @@ h3 {
 .cyberpunk:before {
     background-color: #000;
     color: var(--yellow-color);
+}
+
+p {
+    color: rgb(255, 251, 0);
+    text-shadow: 0 0 2px rgb(253, 238, 24), 0 0 5px rgb(252, 220, 36);
+}
+
+.cybr-btn {
+    --primary: hsl(var(--primary-hue), 85%, calc(var(--primary-lightness, 50) * 1%));
+    --shadow-primary: hsl(var(--shadow-primary-hue), 90%, 50%);
+    --primary-hue: 0;
+    --primary-lightness: 50;
+    --color: hsl(0, 0%, 100%);
+    --font-size: 20px;
+    --shadow-primary-hue: 180;
+    --label-size: 9px;
+    --shadow-secondary-hue: 60;
+    --shadow-secondary: hsl(var(--shadow-secondary-hue), 90%, 60%);
+    --clip: polygon(0 0, 100% 0, 100% 100%, 95% 100%, 95% 90%, 85% 90%, 85% 100%, 8% 100%, 0 70%);
+    --border: 4px;
+    --shimmy-distance: 5;
+    --clip-one: polygon(0 2%, 100% 2%, 100% 95%, 95% 95%, 95% 90%, 85% 90%, 85% 95%, 8% 95%, 0 70%);
+    --clip-two: polygon(0 78%, 100% 78%, 100% 100%, 95% 100%, 95% 90%, 85% 90%, 85% 100%, 8% 100%, 0 78%);
+    --clip-three: polygon(0 44%, 100% 44%, 100% 54%, 95% 54%, 95% 54%, 85% 54%, 85% 54%, 8% 54%, 0 54%);
+    --clip-four: polygon(0 0, 100% 0, 100% 0, 95% 0, 95% 0, 85% 0, 85% 0, 8% 0, 0 0);
+    --clip-five: polygon(0 0, 100% 0, 100% 0, 95% 0, 95% 0, 85% 0, 85% 0, 8% 0, 0 0);
+    --clip-six: polygon(0 40%, 100% 40%, 100% 85%, 95% 85%, 95% 85%, 85% 85%, 85% 85%, 8% 85%, 0 70%);
+    --clip-seven: polygon(0 63%, 100% 63%, 100% 80%, 95% 80%, 95% 80%, 85% 80%, 85% 80%, 8% 80%, 0 70%);
+    font-family: 'Cyber', sans-serif;
+    color: var(--color);
+    cursor: pointer;
+    background: transparent;
+    text-transform: uppercase;
+    font-size: var(--font-size);
+    outline: transparent;
+    letter-spacing: 2px;
+    position: relative;
+    font-weight: 700;
+    border: 0;
+    min-width: 300px;
+    height: 75px;
+    line-height: 75px;
+    transition: background 0.2s;
+}
+
+.cybr-btn:hover {
+    --primary: hsl(var(--primary-hue), 85%, calc(var(--primary-lightness, 50) * 0.8%));
+}
+
+.cybr-btn:active {
+    --primary: hsl(var(--primary-hue), 85%, calc(var(--primary-lightness, 50) * 0.6%));
+}
+
+.cybr-btn:after,
+.cybr-btn:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    clip-path: var(--clip);
+    z-index: -1;
+}
+
+.cybr-btn:before {
+    background: var(--shadow-primary);
+    transform: translate(var(--border), 0);
+}
+
+.cybr-btn:after {
+    background: var(--primary);
+}
+
+.cybr-btn__tag {
+    position: absolute;
+    padding: 1px 4px;
+    letter-spacing: 1px;
+    line-height: 1;
+    bottom: -5%;
+    right: 5%;
+    font-weight: normal;
+    color: hsl(0, 0%, 0%);
+    font-size: var(--label-size);
+}
+
+.cybr-btn__glitch {
+    position: absolute;
+    top: calc(var(--border) * -1);
+    left: calc(var(--border) * -1);
+    right: calc(var(--border) * -1);
+    bottom: calc(var(--border) * -1);
+    background: var(--shadow-primary);
+    text-shadow: 2px 2px var(--shadow-primary), -2px -2px var(--shadow-secondary);
+    clip-path: var(--clip);
+    animation: glitch 2s infinite;
+    display: none;
+}
+
+.cybr-btn:hover .cybr-btn__glitch {
+    display: block;
+}
+
+.cybr-btn__glitch:before {
+    content: '';
+    position: absolute;
+    top: calc(var(--border) * 1);
+    right: calc(var(--border) * 1);
+    bottom: calc(var(--border) * 1);
+    left: calc(var(--border) * 1);
+    clip-path: var(--clip);
+    background: var(--primary);
+    z-index: -1;
+}
+
+@keyframes glitch {
+    0% {
+        clip-path: var(--clip-one);
+    }
+    2%,
+    8% {
+        clip-path: var(--clip-two);
+        transform: translate(calc(var(--shimmy-distance) * -1%), 0);
+    }
+    6% {
+        clip-path: var(--clip-two);
+        transform: translate(calc(var(--shimmy-distance) * 1%), 0);
+    }
+    9% {
+        clip-path: var(--clip-two);
+        transform: translate(0, 0);
+    }
+    10% {
+        clip-path: var(--clip-three);
+        transform: translate(calc(var(--shimmy-distance) * 1%), 0);
+    }
+    13% {
+        clip-path: var(--clip-three);
+        transform: translate(0, 0);
+    }
+    14%,
+    21% {
+        clip-path: var(--clip-four);
+        transform: translate(calc(var(--shimmy-distance) * 1%), 0);
+    }
+    25% {
+        clip-path: var(--clip-five);
+        transform: translate(calc(var(--shimmy-distance) * 1%), 0);
+    }
+    30% {
+        clip-path: var(--clip-five);
+        transform: translate(calc(var(--shimmy-distance) * -1%), 0);
+    }
+    35%,
+    45% {
+        clip-path: var(--clip-six);
+        transform: translate(calc(var(--shimmy-distance) * -1%));
+    }
+    40% {
+        clip-path: var(--clip-six);
+        transform: translate(calc(var(--shimmy-distance) * 1%));
+    }
+    50% {
+        clip-path: var(--clip-six);
+        transform: translate(0, 0);
+    }
+    55% {
+        clip-path: var(--clip-seven);
+        transform: translate(calc(var(--shimmy-distance) * 1%), 0);
+    }
+    60% {
+        clip-path: var(--clip-seven);
+        transform: translate(0, 0);
+    }
+    31%,
+    61%,
+    100% {
+        clip-path: var(--clip-four);
+    }
+}
+
+.cybr-btn:nth-of-type(2) {
+    --primary-hue: 260;
+}
+
+.formulario {
+    margin: 150px 0 auto 25%;
+}
+
+.cyberpunkform {
+    width: 600px;
+    border: 30px solid #000;
+    border-left: 5px solid #000;
+    border-right: 5px solid #000;
+    border-bottom: 15px solid #000;
+    clip-path: polygon( 0px 25px, 26px 0px, calc(60% - 25px) 0px, 60% 25px, 100% 25px, 100% calc(100% - 10px), calc(100% - 15px) calc(100% - 10px), calc(80% - 10px) calc(100% - 10px), calc(80% - 15px) calc(100% - 0px), 10px calc(100% - 0px), 0% calc(100% - 10px));
+    margin-bottom: 10px;
+    padding: 12px;
+}
+
+button.cyberpunk2077,
+a.cyberpunk2077 {
+    --background-color: var(--red-color);
+    display: block;
+    border: none;
+    border-radius: 0%;
+    font-size: 1rem;
+    line-height: 0.1rem;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: 600;
+    padding: 35px 75px;
+    margin: 10px;
+    position: relative;
+    color: #fff;
+    border-right: 3px solid var(--border-color);
+    clip-path: polygon( -15px 0%, calc(100% + 15px) 0%, calc(100% + 15px) 100%, 20px 100%, -15px calc(100% - 35px));
+    cursor: pointer;
+    background-color: var(--background-color);
+    outline: none;
+    display: inline-block;
+}
+
+button.cyberpunk2077:hover,
+a.cyberpunk2077:hover,
+button.cyberpunk2077:focus,
+a.cyberpunk2077:focus {
+    animation-name: buttonhover;
+    animation-duration: var(--glitched-duration);
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+button.cyberpunk2077.green,
+a.cyberpunk2077.green {
+    --background-color: var(--green-color);
+}
+
+button.cyberpunk2077.purple,
+a.cyberpunk2077.purple {
+    --background-color: var(--purple-color);
+}
+
+button.cyberpunk2077.blue,
+a.cyberpunk2077.blue {
+    --background-color: var(--blue-color);
+}
+
+button.cyberpunk2077:after,
+a.cyberpunk2077:after {
+    content: "R-25";
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    right: 25px;
+    padding: 2px 2px 0px 2px;
+    font-size: 0.6rem;
+    line-height: 0.6rem;
+    color: #000;
+    background-color: var(--yellow-color);
+    border-left: 2px solid var(--border-color);
+}
+
+button.cyberpunk2077:hover:after,
+a.cyberpunk2077:hover:after,
+button.cyberpunk2077:focus:after,
+a.cyberpunk2077:focus:after {
+    animation-name: buttonhoverafter;
+    animation-duration: var(--glitched-duration);
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+button.cyberpunk2077:before,
+a.cyberpunk2077:before {
+    --outside: 4px;
+    content: "";
+    position: absolute;
+    display: none;
+    background-color: var(--background-color);
+    width: calc(100% + (var(--outside) * 2));
+    height: 12px;
+    top: 0px;
+    left: calc(0px - 1px - var(--outside));
+    border-left: 2px solid var(--border-color);
+    border-right: 2px solid var(--border-color);
+}
+
+button.cyberpunk2077:hover:before,
+a.cyberpunk2077:hover:before,
+button.cyberpunk2077:focus:before,
+a.cyberpunk2077:focus:before {
+    display: block;
+    animation-name: buttonhoverbefore;
+    animation-duration: var(--glitched-duration);
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes buttonhover {
+    0% {
+        transform: skew(0deg);
+    }
+    60% {
+        transform: skew(0deg);
+    }
+    61% {
+        transform: skew(10deg);
+    }
+    70% {
+        transform: skew(10deg);
+    }
+    71% {
+        transform: skew(0deg);
+    }
+    100% {
+        transform: skew(0deg);
+    }
+}
+
+@keyframes buttonhoverbefore {
+    0% {
+        display: none;
+        top: 0px;
+    }
+    10% {
+        display: none;
+        top: 0px;
+    }
+    11% {
+        display: block;
+        top: 10px;
+        left: calc(0px - 0px - var(--outside));
+    }
+    29% {
+        top: 10px;
+    }
+    30% {
+        display: none;
+        top: 0px;
+    }
+    50% {
+        display: none;
+        top: 0px;
+    }
+    51% {
+        display: block;
+        top: 55px;
+        filter: blur(1px);
+        height: 22px;
+    }
+    90% {
+        display: block;
+        top: 55px;
+        height: 22px;
+    }
+    91% {
+        filter: blur(0px);
+        display: none;
+        top: 0px;
+        height: 12px;
+    }
+    100% {
+        display: none;
+        top: 0px;
+    }
+}
+
+@keyframes buttonhoverafter {
+    0% {
+        right: 45px;
+    }
+    10% {
+        right: 45px;
+    }
+    11% {
+        right: 35px;
+    }
+    20% {
+        transform: skew(0deg);
+    }
+    21% {
+        transform: skew(-10deg);
+    }
+    40% {
+        transform: skew(-10deg);
+    }
+    41% {
+        transform: skew(0deg);
+    }
+    49% {
+        right: 35px;
+    }
+    50% {
+        right: 55px;
+    }
+    60% {
+        right: 55px;
+    }
+    61% {
+        right: 35px;
+    }
+    70% {
+        transform: skew(0deg);
+    }
+    71% {
+        transform: skew(10deg);
+    }
+    80% {
+        transform: skew(10deg);
+    }
+    81% {
+        transform: skew(0deg);
+    }
+    100% {
+        right: 35px;
+    }
+}
+
+footer {
+    text-align: center;
+    margin-top: 100px;
 }
